@@ -29,6 +29,8 @@ Avro 1.6.0 (unreleased)
     AVRO-837. C: New Avro value interface. (dcreager)
     Documented in lang/c/docs/index.html.
 
+    AVRO-861. C: Remove dependency on stdbool.h. (dcreager)
+
   BUG FIXES
 
     AVRO-845. setup.py uses Python2.7+ specific code
